tests/macros/password/page_size.rs
fn main() {
    requestty::questions![Password { page_size: todo!() }];
}
